fixed posts being covered by header

--- a/wp/wp-content/themes/roots/assets/css/base-responsive.css
+++ b/wp/wp-content/themes/roots/assets/css/base-responsive.css
@@ -65,6 +65,9 @@
     body, body.page {
         padding-top:0;
     }
+    article.type-post{
+      padding-top:0px;
+    }
     #nav-main {
         text-align: center;
         float:none;
